Fixed spacing for main content area

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,8 +15,8 @@ body {
     border: 1px solid #cccccc;
     background-color: #ffffff;
     position: absolute;
-    top: 165px;
-    right: 230px;
+    top: 35px;
+    right: 35px;
 
 }
  h1, h2{
@@ -31,24 +31,19 @@ div {
 	padding-top: 35px;
 }
 nav {   
-
-	display: inline;
-    float: right;
+   display: inline;
+    /* float: right; */
     margin-top: 22.44px;
     padding-top: 20px;
-    position: relative;
-    right: 207px;
+    right: -410px;
     color: #cccccc;
-
-
+    position: relative;
 }
 
 nav a {
 	padding: 0px 20px 0px 20px;
 	text-decoration: none;
 	color: #cccccc;
-
-
 }
 
 
@@ -61,6 +56,7 @@ div h1 {
 .main_content p{
 	
 	font-size: 18px;
+
 }
 
 h2 {
@@ -69,15 +65,19 @@ h2 {
 	margin-top: 5px;
 }
 
-.content{
-	background-image: url("../images/pink_rice.png");
-	padding-bottom: 40px;
+.container{
+	
+    padding-bottom: 40px;
+    position: relative;
+    margin-left: 50px;
+    width: 960px;
+    
 }
 
 .main_content{
 	
 	margin-right: 10px;
-	margin-left: 80px;
+	
 	padding: 40px 25px 35px 25px;
 	width: 625px;
 	border-color: #dddddd;
@@ -98,12 +98,14 @@ h2 {
 	background-color:#4aaaa5;
 	color: white;
 	display: inline-block;
-	margin-left: 80px;
+	margin-left: 50px;
 }
+
 
 
 header {
 	border-bottom: 3px solid #cccccc;
+	
 }
 
 footer {
@@ -128,9 +130,7 @@ button {
 	font-size: 16px;
 	border:none;
 }
-button: hover {
-	background-color: red;
-}
+
 ul {
 	padding-left: 0px;
 }
@@ -160,6 +160,9 @@ li div {
     padding-bottom: 15px;
 }
 
-
-
+.background {
+	padding: 0px;
+	background-image: url(../images/pink_rice.png);
+	background-size: 100%;
+}
 
